--- a/package.json
+++ b/package.json
@@ -16,5 +16,7 @@
     "qrcode-terminal": "^0.12.0",
     "sharp": "^0.32.6",
     "wa-sticker-formatter": "^4.4.4"
-  }
+  }, 
+"engines": {
+  "node": "20.x"
 }
