--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@whiskeysockets/baileys": "^6.7.2",
     "pino": "^8.21.0",
     "qrcode": "^1.5.3",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "youtube-dl-exec": "^2.5.8"
   },
   "engines": {
     "node": "20.x"
